@@ -9,9 +9,11 @@ Improved ZX Vision menu interface:
 -Added setting to pause cpu emulation on menu when multitask active
 -Show in file selector when a file can be expanded
 -Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
+-Maximizing windows now take care of zx desktop settings
 
 
 Fixed file previews on corrupted files: pzx, tap
+Fixed rearranging windows and using total window height
 
 
 Version 9.2 - Cliff Hanger edition. 05 April 2021
